# HelixTest

./: .gitignore  Cargo.toml  LICENSE  NOTICE  README.md
.github/workflows/: conformance.yml
ga4gh-test-suite/: README.md
ga4gh-test-suite/crates/api-tests/src/: tests.rs
ga4gh-test-suite/crates/auth-tests/: Cargo.toml
ga4gh-test-suite/crates/auth-tests/src/: tests.rs
ga4gh-test-suite/crates/cli/: Cargo.toml
ga4gh-test-suite/crates/cli/src/: main.rs
ga4gh-test-suite/crates/common/: Cargo.toml
ga4gh-test-suite/crates/common/src/: auth.rs  config.rs  crypto.rs  http.rs  lib.rs  logging.rs  schemas.rs  workflow.rs
ga4gh-test-suite/crates/crypt4gh-tests/: Cargo.toml
ga4gh-test-suite/crates/e2e-tests/: Cargo.toml
ga4gh-test-suite/crates/e2e-tests/src/: tests.rs
ga4gh-test-suite/crates/framework/: Cargo.toml
ga4gh-test-suite/crates/framework/src/: auth.rs  crypt4gh.rs  lib.rs  tes.rs  trs.rs  wes.rs
ga4gh-test-suite/crates/workflow-tests/: Cargo.toml
ga4gh-test-suite/docker/: docker-compose.yml
ga4gh-test-suite/docs/: DISCLAIMER.md  architecture.md  contributing.md  ferrum.md
ga4gh-test-suite/profiles/: ferrum.toml
ga4gh-test-suite/test-data/: README.md
ga4gh-test-suite/test-data/workflows/cwl/: scatter_gather.cwl
ga4gh-test-suite/test-data/workflows/outputs/: nextflow_echo_out.txt  tes_echo_out.txt  wdl_echo_out.txt
ga4gh-test-suite/test-data/workflows/wdl/: echo.wdl
helixtest/: Cargo.toml  README.md
helixtest/crates/api-tests/: Cargo.toml
helixtest/crates/api-tests/src/: tests.rs
helixtest/crates/auth-tests/src/: tests.rs
helixtest/crates/cli/: Cargo.toml
helixtest/crates/cli/src/: main.rs
helixtest/crates/cli/tests/: cli_smoke.rs
helixtest/crates/common/: Cargo.toml
helixtest/crates/common/src/: auth.rs  config.rs  crypto.rs  ga4gh_schemas.rs  http.rs  lib.rs  logging.rs  report.rs  schemas.rs  util.rs  workflow.rs
helixtest/crates/crypt4gh-tests/src/: tests.rs
helixtest/crates/e2e-tests/: Cargo.toml
helixtest/crates/e2e-tests/src/: tests.rs
helixtest/crates/framework/: Cargo.toml
helixtest/crates/framework/src/: auth.rs  beacon.rs  crypt4gh.rs  crypt4gh_ferrum_http.rs  drs.rs  e2e.rs  htsget.rs  lib.rs  tes.rs  trs.rs  wes.rs
helixtest/crates/workflow-tests/src/: tests.rs
helixtest/docs/: architecture.md  changelog.md  conformance-philosophy.md  contributing.md  ferrum.md  ga4gh-official-schemas.md  scoring.md  subset-profiles.md
helixtest/docs/adr/: 0001-ferrum-tes-ci-vs-docker-stack-and-db-init.md  README.md
helixtest/profiles/: bioresearch-assistant.toml  ferrum.toml  generic.toml  strict.toml
helixtest/schemas/ga4gh/: README.md  htsget-openapi.yaml
helixtest/test-data/workflows/cwl/: echo.cwl
helixtest/test-data/workflows/nextflow/: echo.nf
helixtest/test-data/workflows/outputs/: cwl_echo_out.txt  e2e_result.txt
