[workspace]
resolver = "2"
members = [
    "crates/common",
    "crates/framework",
    "crates/api-tests",
    "crates/workflow-tests",
    "crates/e2e-tests",
    "crates/auth-tests",
    "crates/crypt4gh-tests",
    "crates/cli",
]

[workspace.package]
edition = "2021"
license = "Apache-2.0"
authors = ["Synaptic Four <contact@synapticfour.com>"]
license-file = "../LICENSE"

[workspace.dependencies]
anyhow = "1"
thiserror = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
schemars = "0.8"
jsonschema = "0.17"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
sha2 = "0.10"
oauth2 = "4"
openidconnect = "3"
async-trait = "0.1"
url = "2"
uuid = { version = "1", features = ["v4", "serde"] }
futures = "0.3"
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"
age = { version = "0.10", features = ["async"] }
proptest = "1"
insta = { version = "1", features = ["json"] }
assert_cmd = "2"
tempfile = "3"
tokio-retry = "0.3"
clap = { version = "4", features = ["derive"] }
toml = "0.8"
serde_yaml = "0.9"
openapi-deref = "0.1"
once_cell = "1.21"
crypt4gh = "0.4.1"
