[package]
name = "framework"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
chrono = { workspace = true }
futures = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
common = { path = "../common" }
url = { workspace = true }
schemars = { workspace = true }
jsonschema = { workspace = true }
sha2 = { workspace = true }

