[package]
name = "api-tests"
version = "0.1.0"
edition = "2021"

[dev-dependencies]
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
schemars = { workspace = true }
jsonschema = { workspace = true }
tracing = { workspace = true }
common = { path = "../common" }

[lib]
path = "src/lib.rs"

