[package]
name = "helixtest-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
framework = { path = "../framework" }
common = { path = "../common" }

[dev-dependencies]

[[bin]]
name = "helixtest"
path = "src/main.rs"

