[package]
name = "common"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
reqwest = { workspace = true }
schemars = { workspace = true }
jsonschema = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
sha2 = { workspace = true }
hmac = "0.12"
oauth2 = { workspace = true }
openidconnect = { workspace = true }
async-trait = { workspace = true }
url = { workspace = true }
uuid = { workspace = true }
futures = { workspace = true }
base64 = { workspace = true }
chrono = { workspace = true }
rand = { workspace = true }
age = { workspace = true }
tokio-retry = { workspace = true }
tempfile = { workspace = true }
toml = { workspace = true }
serde_yaml = { workspace = true }
openapi-deref = { workspace = true }
once_cell = { workspace = true }

[dev-dependencies]
wiremock = "0.6"
